# R-Link-Web

./: .env  .env.example  .gitignore  SUPABASE_QUICKSTART.md  SUPABASE_SETUP.md  TAURI_BUILD.md  build-dev.bat  build-dev.sh  build.bat  build.sh  index.html  package.json  vite.config.ts
src/: App.tsx  STRUCTURE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src/api/: README.md  client.ts  config.ts  hooks.ts  index.ts  plugins.ts  system.ts  types.ts
src/components/: AuthPage.tsx  DashboardView.tsx  NodeDetailModal.tsx  PluginDetailModal.tsx  PluginsView.tsx  SupabaseConnectionTest.tsx  SupabaseExample.tsx  TopologyView.tsx  index.ts
src/components/common/: FileIcon.tsx  SidebarItem.tsx  StatCard.tsx  StatusBadge.tsx  index.ts
src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx  TitleBar.tsx  index.ts
src/components/modals/: SettingsModal.tsx  TermsModal.tsx  UserMenu.tsx  index.ts
src/components/pages/: AuthScreen.tsx  ConsoleView.tsx  DomainView.tsx  DownloadsView.tsx  FRPView.tsx  ProfileView.tsx  RemoteView.tsx  SSHView.tsx  StorageView.tsx  index.ts
src/components/terminal/: Terminal.css  Terminal.tsx  index.ts
src/constants/: index.ts  mockData.ts  routes.ts  theme.ts
src/hooks/: index.ts  useSupabase.tsx
src/styles/: SCROLLBAR.md  globals.css
src/utils/: index.ts  tauriWindow.ts
src/utils/supabase/: auth.ts  client.ts  database.ts  info.tsx  types.ts
supabase/: README.md
supabase/migrations/: 001_initial_tables.sql
(+2 files in other folders)
