[package]
name = "rlink-tauri"
version = "0.1.0"
description = "R-Link Tauri app"
authors = ["R-Link Team"]
edition = "2021"

[lib]
name = "rlink_tauri"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
